<resources>
    <string name="app_name">Calculex</string>



    <!-- Button operators -->
    <string name="btn_clean">C</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_substraction">-</string>
    <string name="btn_addition">+</string>

    <string name="btn_number_dot">.</string>
    <string name="btn_number_zero">0</string>
    <string name="btn_number_equal">=</string>

    <!-- Button numbers -->
    <string name="btn_number_1">1</string>
    <string name="btn_number_2">2</string>
    <string name="btn_number_3">3</string>
    <string name="btn_number_4">4</string>
    <string name="btn_number_5">5</string>
    <string name="btn_number_6">6</string>
    <string name="btn_number_7">7</string>
    <string name="btn_number_8">8</string>
    <string name="btn_number_9">9</string>

    <!-- Other -->


</resources>
