<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InputFragment"
    android:orientation="horizontal">

    <!-- Numbers -->
    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:rowCount="4"
        android:columnCount="3"
        android:orientation="horizontal"
        android:background="@color/colorButtonNumbers">

        <!-- 7 8 9 -->
        <Button
            android:id="@+id/btn_number_7"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_7"/>

        <Button
            android:id="@+id/btn_number_8"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_8"/>

        <Button
            android:id="@+id/btn_number_9"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_9"/>

        <!-- 4 - 5 - 6 -->
        <Button
            android:id="@+id/btn_number_4"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_4"/>
        <Button
            android:id="@+id/btn_number_5"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_5"/>

        <Button
            android:id="@+id/btn_number_6"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_6"/>

        <!-- 1 - 2 - 3 -->
        <Button
            android:id="@+id/btn_number_1"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_1"/>

        <Button
            android:id="@+id/btn_number_2"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_2"/>

        <Button
            android:id="@+id/btn_number_3"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_3"/>

        <!-- . - 0 - = -->
        <Button
            android:id="@+id/btn_dot"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_dot"/>

        <Button
            android:id="@+id/btn_number_0"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_zero"/>

        <Button
            android:id="@+id/btn_equal"
            style="@style/ButtonNumbers"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_number_equal"/>

    </GridLayout>


    <!-- Operators -->
    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:rowCount="5"
        android:columnCount="1"
        android:orientation="horizontal"
        android:background="@color/colorButtonOperators">

        <Button
            android:id="@+id/btn_clean"
            style="@style/ButtonOperators"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_clean"/>

        <Button
            android:id="@+id/btn_divide"
            style="@style/ButtonOperators"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_divide"/>

        <Button
            android:id="@+id/btn_multiplication"
            style="@style/ButtonOperators"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_multiplication"/>

        <Button
            android:id="@+id/btn_substraction"
            style="@style/ButtonOperators"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_substraction"/>

        <Button
            android:id="@+id/btn_addition"
            style="@style/ButtonOperators"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/btn_addition"/>

    </GridLayout>

</LinearLayout>